--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">Github Hub</string>
     <string name="profile_image">Profile image</string>
     <string name="see_on_github">see on Github</string>
+    <string name="test_tag_circular_progress">progress_bar_test_tag</string>
+    <string name="test_tag_user_card">user card</string>
+    <string name="error_test_tag">error_test_tag</string>
+    <string name="github_icon_test_tag">github_icon_test_tag</string>
 
 
     <plurals name="followers">
