--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Github Hub</string>
+    <string name="app_name">Github Lagos</string>
     <string name="profile_image">Profile image</string>
     <string name="see_on_github">see on Github</string>
     <string name="test_tag_circular_progress">progress_bar_test_tag</string>
